trying to fix ingress templating issues

--- a/mts-jenkins/templates/jenkins-master-ingress.yaml
+++ b/mts-jenkins/templates/jenkins-master-ingress.yaml
@@ -14,7 +14,7 @@ spec:
       http:
         paths:
           - backend:
-              serviceName: {{template "jenkins.fullname" . }}
+              serviceName: jenkins-test
               servicePort: {{ .Values.Master.ServicePort }}
 {{- if .Values.Master.Ingress.Path }}
             path: {{ .Values.Master.Ingress.Path }}
