--- a/mts-jenkins/templates/jenkins-master-ingress.yaml
+++ b/mts-jenkins/templates/jenkins-master-ingress.yaml
@@ -24,6 +24,6 @@ spec:
           - path: {{ $ingressPath }}
             backend:
               serviceName: {{ $fullName }}
-              servicePort: http
+              servicePort: {{ $servicePort }}
   {{- end }}
 {{- end }}
