--- a/mts-nodejs/templates/ingress.yaml
+++ b/mts-nodejs/templates/ingress.yaml
@@ -1,4 +1,6 @@
 {{- if .Values.ingress.host }}
+{{- $fullName := include "fullname" . -}}
+{{- $ingressPath := .Values.ingress.path -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -9,15 +11,15 @@ metadata:
   name: {{ template "node.fullname" . }}
 spec:
   rules:
-  - host: {{ .Values.ingress.host | quote }}
-    http:
-      paths:
-      - backend:
-          serviceName: {{ template "node.fullname" . }}
-          servicePort: {{ .Values.service.port }}
-{{- if .Values.ingress.Path }}
-        path: {{ .Values.ingress.path }}
-{{- end -}}
+  {{- range .Values.ingress.hosts }}
+    - host: {{ . }}
+      http:
+        paths:
+          - path: {{ $ingressPath }}
+            backend:
+              serviceName: {{ $fullName }}
+              servicePort: http
+  {{- end }}
 {{- if .Values.ingress.TLS }}
   tls:
 {{ toYaml .Values.ingress.TLS | indent 4 }}
