--- a/mts-nodejs/templates/ingress.yaml
+++ b/mts-nodejs/templates/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ingress.host }}
+{{- if .Values.ingress.enabled }}
 {{- $fullName := include "fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
 apiVersion: extensions/v1beta1
