--- a/mts-confluence/templates/confluence-ingress.yaml
+++ b/mts-confluence/templates/confluence-ingress.yaml
@@ -1,16 +1,29 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
- name: confluence-ingress
- annotations:
-   kubernetes.io/ingress.class: traefik
+  name: confluence-ingress
+  labels:
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+  annotations:
+    kubernetes.io/ingress.class: traefik
 spec:
+{{- if .Values.ingress.tls }}
+  tls:
+  {{- range .Values.ingress.tls }}
+    - hosts:
+      {{- range .hosts }}
+        - {{ . }}
+      {{- end }}
+      secretName: {{ .secretName }}
+  {{- end }}
+{{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
     - host: {{ . }}
       http:
         paths:
-            backend:
+          - backend:
               serviceName: mtsconfluence
               servicePort: http
   {{- end }}
