confluence ingress range

--- a/mts-confluence/templates/confluence-ingress.yaml
+++ b/mts-confluence/templates/confluence-ingress.yaml
@@ -25,5 +25,5 @@ spec:
         paths:
           - backend:
               serviceName: mtsconfluence
-              servicePort: http
+              servicePort: 80
   {{- end }}
