--- a/mts-nodejs/templates/deployment.yaml
+++ b/mts-nodejs/templates/deployment.yaml
@@ -115,12 +115,14 @@ spec:
         - name: http
           containerPort: {{ .Values.applicationPort }}
         livenessProbe:
-          tcpSocket:
+          httpGet:
+            path: {{ .Values.livenessProbePath }}
             port: http
           initialDelaySeconds: 15
           periodSeconds: 20
         readinessProbe:
-          tcpSocket:
+          httpGet:
+            path: {{ .Values.readinessProbePath }}
             port: http
           initialDelaySeconds: 15
           periodSeconds: 20
