--- a/mts-apache/templates/ingress.yaml
+++ b/mts-apache/templates/ingress.yaml
@@ -13,7 +13,7 @@ metadata:
   annotations:
     # kubernetes.io/ingress.class: traefik
     # kubernetes.io/tls-acme: "true"
-    # kubernetes.io/whitelist-source-range: "198.103.152.51/32"
+    # traefik.frontend.whitelistSourceRange: "198.103.152.51/32"
 spec:
 {{- if .Values.ingress.tls }}
   tls:
