--- a/dts-sab/templates/deployment.yaml
+++ b/dts-sab/templates/deployment.yaml
@@ -1,22 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "dts-sab.fullname" . }}
+  name: {{ include "fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "dts-sab.name" . }}
-    helm.sh/chart: {{ include "dts-sab.chart" . }}
+    app.kubernetes.io/name: {{ include "name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "dts-sab.name" . }}
+      app.kubernetes.io/name: {{ include "name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "dts-sab.name" . }}
+        app.kubernetes.io/name: {{ include "name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       containers:
