--- a/dts-sab/values.yaml
+++ b/dts-sab/values.yaml
@@ -3,23 +3,26 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
-mongo:
-  uri:
-  database:
-  port:
-  user:
-  password:
-git:
-  branchname:
-  user:
-  password:
-  repo:
-workdir:
-startcommand:
-backofflimit:
-dataseed: 
+dataseed:
   enabled: true
+  image:
+    repository: mtscontainers.azurecr.io/dts-sab
+    tag: 0.1.1
+  mongo:
+    uri:
+    database:
+    port:
+    user:
+    password:
+  git:
+    branchname:
+    user:
+    password:
+    repo:
+  workdir:
+  startcommand:
+  backofflimit: 4
+
 
 image:
   repository: nginx
