--- a/mts-nodejs/templates/dataseed.yaml
+++ b/mts-nodejs/templates/dataseed.yaml
@@ -20,7 +20,7 @@ spec:
           - name: MONGO_DATABASE
             value:  {{ .Values.dataseed.mongo.database }}
           - name: MONGO_PORT
-            value:  {{ .Values.dataseed.mongo.port }}
+            value:  {{ .Values.dataseed.mongo.port | quote }}
           - name: MONGO_USER
             value:  {{ .Values.dataseed.mongo.user }}
           - name: MONGO_PASSWORD
@@ -38,5 +38,5 @@ spec:
           - name: STARTCOMMAND
             value: {{ .Values.dataseed.startcommand }}                  
       restartPolicy: Never
-  backoffLimit: {{ .Values.backofflimit }}
+  backoffLimit: {{ .Values.backofflimit | quote}}
   {{ end }}
