removing quotes from backoff limit

--- a/mts-nodejs/templates/dataseed.yaml
+++ b/mts-nodejs/templates/dataseed.yaml
@@ -38,5 +38,5 @@ spec:
           - name: STARTCOMMAND
             value: {{ .Values.dataseed.startcommand }}                  
       restartPolicy: Never
-  backoffLimit: {{ .Values.backofflimit | quote}}
+  backoffLimit: {{ .Values.backofflimit }}
   {{ end }}
