--- a/dts-graylog/requirements.yaml
+++ b/dts-graylog/requirements.yaml
@@ -1,7 +1,7 @@
 dependencies:
-- name: elasticsearch
-  version: 1.15.0
-  repository: https://kubernetes-charts.storage.googleapis.com/
+- name: dts-elasticsearch
+  version: 1.15.1
+  repository: https://helm.esdc.online
   tags:
     - install-elasticsearch
 - name: mongodb-replicaset
