--- a/dts-azpipelines/templates/deployment.yaml
+++ b/dts-azpipelines/templates/deployment.yaml
@@ -26,6 +26,10 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      {{- if .Values.extraEnv }}
+          env:
+      {{ toYaml .Values.extraEnv | indent 10 }}
+      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
