--- a/dts-azpipelines/templates/deployment.yaml
+++ b/dts-azpipelines/templates/deployment.yaml
@@ -42,3 +42,7 @@ spec:
       volumeMounts:
       {{ toYaml .Values.Persistence.mounts | nindent 8 }}
       {{- end }}
+      volumes:
+      {{- if .Values.Persistence.volumes }}
+      {{ toYaml .Values.Persistence.volumes | indent 6 }}
+      {{- end }}
