--- a/dts-azpipelines/templates/deployment.yaml
+++ b/dts-azpipelines/templates/deployment.yaml
@@ -43,7 +43,6 @@ spec:
       {{ toYaml .Values.Persistence.mounts | nindent 8 }}
       {{- end }}
     volumes:
-    -
     {{- if .Values.Persistence.volumes }}
-    {{ toYaml .Values.Persistence.volumes | indent 6 }}
+    {{ toYaml .Values.Persistence.volumes | nindent 6 }}
     {{- end }}
