--- a/dts-graylog/templates/network-policy.yaml
+++ b/dts-graylog/templates/network-policy.yaml
@@ -14,21 +14,9 @@ spec:
   - Egress
   ingress:
   - from:
-  {{ if .Values.networkPolicy.ingressCidrBlock }}
-    - ipBlock:
-        cidr: {{ .Values.networkPolicy.ingressCidrBlock }}
-        {{ if .Values.networkPolicy.ingressCidrBlockException }} 
-        except:
-        - {{ .Values.networkPolicy.ingressCidrBlockException }}
-        {{ end }}
-  {{ end }}
-  {{ if .Values.networkPolicy.ingressPodMatchLabels }}
-    - podSelector:
-        matchLabels:
-        {{- range $key, $value := .Values.networkPolicy.ingressPodMatchLabels }}
-        {{ $key }}: {{ $value | quote }}
-        {{- end }} 
-  {{ end }}
+    {{- if .Values.ingressRules }}
+    {{ toYaml .Values.ingressRules | indent 4 }}
+    {{- end }}
     ports:
     - protocol: TCP
       port: 9000
