Forgot to fix pathing in if statement

--- a/dts-graylog/templates/network-policy.yaml
+++ b/dts-graylog/templates/network-policy.yaml
@@ -14,7 +14,7 @@ spec:
   - Egress
   ingress:
   - from:
-    {{- if .Values.ingressRules }}
+    {{- if .Values.networkPolicy.ingressRules }}
     {{ toYaml .Values.networkPolicy.ingressRules | indent 4 }}
     {{- end }}
     ports:
