--- a/logstash/templates/ingress.yaml
+++ b/logstash/templates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   name: {{ $fullName }}
   labels:
     app: {{ template "name" . }}
-    chart: {{ template "chart" . }}
+    chart: "{{ .Chart.Name }}"
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 {{- with .Values.ingress.annotations }}
