Testing filepathing for secrets

--- a/elk-secrets/templates/secret.yaml
+++ b/elk-secrets/templates/secret.yaml
@@ -10,4 +10,4 @@ metadata:
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
 type: Opaque
 data:
-  {{ (.Files.Glob "{{ .Values.secrets.files.filePattern }}").AsSecrets | indent 2 }}
+  {{ (.Files.Glob "{{ ./certs/*.p12 }}").AsSecrets | indent 2 }}
