--- a/elk-secrets/values.yaml
+++ b/elk-secrets/values.yaml
@@ -1,3 +1,6 @@
 secrets:
-    files:
-        filePattern: "*.secret"
+    elastic:
+        username: changeme
+        password: changeme
+    kibana:
+        encryptionKey: changeme
