--- a/elk-secrets/templates/esdc-wildcard-cert.yaml
+++ b/elk-secrets/templates/esdc-wildcard-cert.yaml
@@ -9,5 +9,10 @@ metadata:
     app.kubernetes.io/instance: "{{ .Release.Name }}"
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
 type: Opaque
+{{- if eq .Values.environment "dev" }}
 data:
-{{ (.Files.Glob "certs/esdc.online.crt").AsSecrets | indent 2 }}
+{{ (.Files.Glob "certs/devCerts/esdc.dev.crt").AsSecrets | indent 2 }}
+{{ else }}
+data:
+  {{ (.Files.Glob "certs/esdc.online.crt").AsSecrets | indent 2 }}
+{{ end }}
