--- a/elasticsearch/values.yaml
+++ b/elasticsearch/values.yaml
@@ -2,6 +2,9 @@
 clusterName: "elasticsearch"
 nodeGroup: "master"
 
+networkPolicy:
+  enabled: false
+
 # The service that non master groups will try to connect to when joining the cluster
 # This should be set to clusterName + "-" + nodeGroup for your master group
 masterService: ""
