--- a/kibana/values.yaml
+++ b/kibana/values.yaml
@@ -5,6 +5,9 @@ elasticsearchHosts: "http://elasticsearch-master:9200"
 
 replicas: 1
 
+networkPolicy:
+  enabled: false
+
 # Extra environment variables to append to this nodeGroup
 # This will be appended to the current 'env:' key. You can use any of the kubernetes env
 # syntax here
