--- a/kibana/templates/ingress.yaml
+++ b/kibana/templates/ingress.yaml
@@ -1,15 +1,16 @@
-{{- if .Values.ingress.enabled -}}
 {{- $fullName := include "fullname" . -}}
 {{- $servicePort := .Values.service.port -}}
-{{- $ingressPath := .Values.ingress.path -}}
-apiVersion: {{ template "kibana.ingress.apiVersion" . }}
-kind: Ingress
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
 metadata:
   name: {{ $fullName }}
+  #annotations:
+  #  helm.sh/hook: "post-install"
   labels:
     app: {{ .Chart.Name }}
     release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    heritage: {{ .Release.Service }}    
+    #chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
 {{- with .Values.ingress.annotations }}
   annotations:
 {{ toYaml . | indent 4 }}
@@ -19,14 +20,44 @@ spec:
   tls:
 {{ toYaml .Values.ingress.tls | indent 4 }}
 {{- end }}
-  rules:
-  {{- range .Values.ingress.hosts }}
-    - host: {{ . }}
-      http:
-        paths:
-          - path: {{ $ingressPath }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $servicePort }}
+  entryPoints:
+    - web
+  routes:
+  {{- range .Values.ingress.hosts }} 
+  - match: Host(`{{ . }}`)
+    kind: Rule
+    services:
+    - name: {{ $fullName }}
+      port: {{ $servicePort }}
   {{- end }}
-{{- end }}
+#{{- if .Values.ingress.enabled -}}
+#{{- $ingressPath := .Values.ingress.path -}}
+# apiVersion: {{ template "kibana.ingress.apiVersion" . }}
+# kind: Ingress
+# metadata:
+#   name: {{ $fullName }}
+#   labels:
+#     app: {{ .Chart.Name }}
+#     release: {{ .Release.Name }}
+#     heritage: {{ .Release.Service }}
+# {{- with .Values.ingress.annotations }}
+#   annotations:
+# {{ toYaml . | indent 4 }}
+# {{- end }}
+# spec:
+# {{- if .Values.ingress.tls }}
+#   tls:
+# {{ toYaml .Values.ingress.tls | indent 4 }}
+# {{- end }}
+#   rules:
+  # {{- range .Values.ingress.hosts }}
+  #   - host: {{ . }}
+  #     http:
+  #       paths:
+  #         - path: {{ $ingressPath }}
+  #           backend:
+  #             serviceName: {{ $fullName }}
+  #             servicePort: {{ $servicePort }}
+  # {{- end }}
+ #{{- end }}
+# ---
