--- a/dts-traefik/Chart.yaml
+++ b/dts-traefik/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: traefik
+name: dts-traefik
 version: 3.1.0
 appVersion: 2.1.1
 description: A Traefik based Kubernetes ingress controller
