--- a/elk-secrets/templates/elastic-certificates.yaml
+++ b/elk-secrets/templates/elastic-certificates.yaml
@@ -10,4 +10,4 @@ metadata:
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
 type: Opaque
 data:
-{{ (.Files.Glob "certs/elastic-certificates.p12").AsSecrets | indent 2 }}
+{{ (.Files.Glob "certs/elastic.p12").AsSecrets | indent 2 }}
