Traefik2 chart configured for dev with dts-environment set up as an example

--- a/dts-environment/values.yaml
+++ b/dts-environment/values.yaml
@@ -66,7 +66,10 @@ service:
   ##
   externalTrafficPolicy: Cluster
 ingress:
+  enabled: false
+ingressRoute:
   enabled: true
+  tls: false
 apache:
     mountHTDocs: false
     htdocsSecretName:
@@ -74,5 +77,5 @@ apache:
     htdocsSubPath:
     azureStorageAccountName:
     azureStorageAccountKey:
-environment: benrd
+environment: adamrd
     
