--- a/dts-environment/values.yaml
+++ b/dts-environment/values.yaml
@@ -66,7 +66,7 @@ service:
   ##
   externalTrafficPolicy: Cluster
 ingress:
-  enabled: false
+  enabled: true
 ingressRoute:
   enabled: true
   tls: false
