--- a/elk-secrets/templates/elastic-key.yaml
+++ b/elk-secrets/templates/elastic-key.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: elastic-certificate-pem
+  name: elastic-key
   labels:
     app.kubernetes.io/name: {{ template "elk.name" . }}
     helm.sh/chart: {{ template "elk.chart" . }}
@@ -10,4 +10,4 @@ metadata:
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
 type: Opaque
 data:
-{{ (.Files.Glob "certs/elastic.crt").AsSecrets | indent 2 }}
+{{ (.Files.Glob "certs/elastic.key").AsSecrets | indent 2 }}
