--- a/elk-secrets/templates/esdc-wildcard-cert.yaml
+++ b/elk-secrets/templates/esdc-wildcard-cert.yaml
@@ -10,4 +10,4 @@ metadata:
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
 type: Opaque
 data:
-  {{ (.Files.Glob "certs/rootCA.crt").AsSecrets | indent 2 }}
+  {{ (.Files.Glob "certs/dts-stn.com.crt").AsSecrets | indent 2 }}
