--- a/elk-secrets/templates/esdc-wildcard-key-pkcs8.yaml
+++ b/elk-secrets/templates/esdc-wildcard-key-pkcs8.yaml
@@ -10,4 +10,4 @@ metadata:
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
 type: Opaque
 data:
-  {{ (.Files.Glob "certs/dts-stn.com.key").AsSecrets | indent 2 }}
+  {{ (.Files.Glob "certs/dts-stn.com.pk8").AsSecrets | indent 2 }}
