--- a/elk-secrets/templates/elastic-ca.yaml
+++ b/elk-secrets/templates/elastic-ca.yaml
@@ -10,4 +10,4 @@ metadata:
     app.kubernetes.io/version: "{{ .Chart.AppVersion }}"
 type: Opaque
 data:
-{{ (.Files.Glob "certs/rootCA.crt").AsSecrets | indent 2 }}
+{{ (.Files.Glob "certs/{{ .Values.domain }}/rootCA.crt").AsSecrets | indent 2 }}
