--- a/dts-traefik/templates/crd/ingressroutetcp.yaml
+++ b/dts-traefik/templates/crd/ingressroutetcp.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.crd }}
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -10,3 +11,4 @@ spec:
     plural: ingressroutetcps
     singular: ingressroutetcp
   scope: Namespaced
+{{- end -}}
