--- a/dts-traefik/templates/dashboard-hook-ingressroute.yaml
+++ b/dts-traefik/templates/dashboard-hook-ingressroute.yaml
@@ -13,10 +13,16 @@ metadata:
 spec:
   entryPoints:
     - web
+    - websecure
   routes:
   - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
     kind: Rule
     services:
     - name: api@internal
       kind: TraefikService
+  {{- if .Values.dashboard.tls }}
+  tls:
+    certResolver: default
+  {{- end }}
+
 {{- end -}}
