--- a/dts-traefik/values.yaml
+++ b/dts-traefik/values.yaml
@@ -67,6 +67,7 @@ dashboard:
   # and /api This is not secure and SHOULD NOT be enabled on production
   # deployments
   ingressRoute: true
+  tls: true
 
 logs:
   loglevel: DEBUG
@@ -84,4 +85,4 @@ tolerations: []
 # Toggle this to 'TRUE' if you have not yet deployed the custom resource definitions to your cluster.
 # to check, run `kubectl get crd`. custom resource definitions are required to get this installation of
 # traefik to work
-crd: false
+crd: true
