--- a/dts-environment/values.yaml
+++ b/dts-environment/values.yaml
@@ -66,10 +66,10 @@ service:
   ##
   externalTrafficPolicy: Cluster
 ingress:
-  enabled: true
+  enabled: false
 ingressRoute:
   enabled: true
-  tls: false
+  tls: true
 apache:
     mountHTDocs: false
     htdocsSecretName:
