--- a/dts-traefik/templates/dashboard-hook-ingressroute.yaml
+++ b/dts-traefik/templates/dashboard-hook-ingressroute.yaml
@@ -12,7 +12,6 @@ metadata:
     heritage: {{ .Release.Service | quote }}
 spec:
   entryPoints:
-    - web
     - websecure
   routes:
   - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
@@ -21,8 +20,7 @@ spec:
     - name: api@internal
       kind: TraefikService
   {{- if .Values.dashboard.tls }}
-  tls:
-    certResolver: default
+  tls: {}
   {{- end }}
 
 {{- end -}}
