--- a/dts-traefik/values.yaml
+++ b/dts-traefik/values.yaml
@@ -19,7 +19,14 @@ rollingUpdate:
 # Additional arguments to be passed at Traefik's binary
 ## Use curly braces to pass values: `helm install --set="{--providers.kubernetesingress,--global.checknewversion=true}" ."
 additionalArguments:
+  - "--api.insecure"
   - "--accesslog"
+  - "--certificatesresolvers.default.acme.tlschallenge=true"
+  - "--certificatesresolvers.default.acme.email=gocmts@gmail.com"
+  - "--certificatesresolvers.default.acme.storage=acme.json"
+  # Please note that this is the staging Let's Encrypt server.
+  # Once you get things working, you should remove that whole line altogether.
+  # - "--certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
 #  - "--providers.kubernetesingress"
 
 #
