--- a/dts-environment/templates/httpsRedirect.yaml
+++ b/dts-environment/templates/httpsRedirect.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: test-redirectscheme
+  name: https-redirectscheme
 spec:
   redirectScheme:
     scheme: https
