--- a/dts-environment/values.yaml
+++ b/dts-environment/values.yaml
@@ -70,6 +70,7 @@ ingress:
 ingressRoute:
   enabled: true
   tls: true
+  host: Host(`environment.adamrd.dts-stn.com`)
 apache:
     mountHTDocs: false
     htdocsSecretName:
