--- a/dts-consul/Chart.yaml
+++ b/dts-consul/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: consul
+name: dts-consul
 version: 0.15.0
 description: Install and configure Consul on Kubernetes.
 home: https://www.consul.io
