--- a/dts-vault/Chart.yaml
+++ b/dts-vault/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: vault
+name: dts-vault
 version: 0.3.3
 description: Install and configure Vault on Kubernetes.
 home: https://www.vaultproject.io
