--- a/dts-consul/values.yaml
+++ b/dts-consul/values.yaml
@@ -344,7 +344,10 @@ client:
     configSecret:
       secretName: null
       secretKey: null
-
+ingress:
+  enabled: true
+ingressRoute:
+  enabled: true
 # Configuration for DNS configuration within the Kubernetes cluster.
 # This creates a service that routes to all agents (client or server)
 # for serving DNS requests. This DOES NOT automatically configure kube-dns
