--- a/dts-consul/templates/ingress.yaml
+++ b/dts-consul/templates/ingress.yaml
@@ -1,25 +1,36 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "consul.fullname" . -}}
+{{- $fullName := include "fullname" . -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    app: 
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    app.kubernetes.io/name: dts-consul
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
   annotations:
-    kubernetes.io/ingress.class: traefik
+    # kubernetes.io/ingress.class: traefik
+    # kubernetes.io/tls-acme: "true"
+    # traefik.frontend.whitelistSourceRange: "198.103.152.51/32"
 spec:
+{{- if .Values.ingress.tls }}
+  tls:
+  {{- range .Values.ingress.tls }}
+    - hosts:
+      {{- range .hosts }}
+        - {{ . }}
+      {{- end }}
+      secretName: {{ .secretName }}
+  {{- end }}
+{{- end }}
   rules:
-    {{- range $host := .Values.ingress.hosts }}
-    - host: {{ $host }}
+  {{- range .Values.ingress.hosts }}
+    - host: {{ . }}
       http:
         paths:
           - path: /
             backend:
-              serviceName: {{ template "consul.fullname" . }}-ui
+              serviceName: {{ $fullName }}-ui
               servicePort: http
-    {{- end -}}
-{{- end -}} }}
+  {{- end }}
+{{- end }}
