fixed ingress.yaml template with the help of eric. looks to be working now

--- a/dts-consul/templates/ingress.yaml
+++ b/dts-consul/templates/ingress.yaml
@@ -30,7 +30,7 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: {{ $fullName }}-ui
+              serviceName: {{ template "consul.fullname" $ }}-ui
               servicePort: http
   {{- end }}
 {{- end }}
