--- a/dts-consul/values.yaml
+++ b/dts-consul/values.yaml
@@ -12,7 +12,7 @@ global:
 
   # name sets the prefix used for all resources in the helm chart.
   # If not set, the prefix will be "<helm release name>-consul".
-  name: null
+  name: dts-consul
 
   # domain is the domain Consul will answer DNS queries for
   # (see https://www.consul.io/docs/agent/options.html#_domain) and the domain
