--- a/dts-traefik/templates/dashboard-hook-ingressroute.yaml
+++ b/dts-traefik/templates/dashboard-hook-ingressroute.yaml
@@ -1,8 +1,33 @@
 {{- if .Values.dashboard.ingressRoute }}
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.containo.us/v1beta1
 kind: IngressRoute
 metadata:
   name: {{ template "traefik.fullname" . }}-dashboard
+  annotations:
+    helm.sh/hook: "post-install"
+  labels:
+    app: {{ template "traefik.name" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
+spec:
+  entryPoints:
+    - web
+  routes:
+  - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
+    kind: Rule
+    services:
+    - name: api@internal
+      kind: TraefikService
+    # middlewares:
+    # - name: redirect-to-https
+
+---
+
+apiVersion: traefik.containo.us/v1beta1
+kind: IngressRoute
+metadata:
+  name: {{ template "traefik.fullname" . }}-dashboard-tls
   annotations:
     helm.sh/hook: "post-install"
   labels:
@@ -22,5 +47,4 @@ spec:
   {{- if .Values.dashboard.tls }}
   tls: {}
   {{- end }}
-
 {{- end -}}
