This works pretty good now

--- a/dts-traefik/templates/httpsRedirect.yaml
+++ b/dts-traefik/templates/httpsRedirect.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.sslEnforced }}
-apiVersion: traefik.containo.us/v1beta1
+apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: redirect-to-https
@@ -11,7 +11,7 @@ spec:
 
 ---
 
-apiVersion: traefik.containo.us/v1beta1
+apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: redirect-to-https
